--- a/FlymeUXDSketchHelper.sketchplugin/Contents/Sketch/manifest.json
+++ b/FlymeUXDSketchHelper.sketchplugin/Contents/Sketch/manifest.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
   "version": "1.0",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
+  "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
   "compatibleVersion": "3",
   "bundleVersion": 1,
   "commands": [
