--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -3,7 +3,7 @@
   "description": "",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "1.0.1",
+  "version": "1.1",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
   "compatibleVersion": "3",
@@ -14,11 +14,18 @@
       "identifier": "pageNumber",
       "script": "main.js",
       "handler": "updatePageNumbers"
+    },
+    {
+      "name": "更新目录",
+      "identifier": "updateCatalog",
+      "script": "main.js",
+      "handler": "updateCatalog"
     }
   ],
   "menu": {
     "items": [
-      "pageNumber"
+      "pageNumber",
+      "updateCatalog"
     ]
   }
 }
