1. 获得目录信息，删除旧目录（生成新目录还没做） 2. 记录了一些脑洞功能😂

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -16,7 +16,7 @@
       "handler": "updatePageNumbers"
     },
     {
-      "name": "更新目录",
+      "name": "更新文档页码及目录",
       "identifier": "updateCatalog",
       "script": "main.js",
       "handler": "updateCatalog"
