--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -3,28 +3,22 @@
   "description": "",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "1.1",
+  "version": "1.0.9",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
   "compatibleVersion": "3",
   "bundleVersion": 1,
   "commands": [
     {
-      "name": "更新文档页码",
-      "identifier": "pageNumber",
-      "script": "main.js",
-      "handler": "updatePageNumbers"
-    },
-    {
-      "name": "更新文档页码及目录",
+      "name": "更新文档页码及封面目录",
       "identifier": "updateCatalog",
+      "shortcut": "ctrl shift u",
       "script": "main.js",
       "handler": "updateCatalog"
     }
   ],
   "menu": {
     "items": [
-      "pageNumber",
       "updateCatalog"
     ]
   }
