--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -3,7 +3,7 @@
   "description": "",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
   "compatibleVersion": "3",
@@ -12,7 +12,7 @@
     {
       "name": "更新文档页码及封面目录",
       "identifier": "updateCatalog",
-      "shortcut": "ctrl shift u",
+      "shortcut": "ctrl shift c",
       "script": "main.js",
       "handler": "updateCatalog"
     }
