--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -1,19 +1,18 @@
 {
-  "name": "Fletch",
+  "name": "Fletch ObjC",
   "description": "",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "1.1.0",
-  "identifier": "com.flyme.uxd.pbb.sketch-helper",
-  "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
+  "version": "1.2.0",
+  "identifier": "com.flyme.uxd.pbb.sketch-helper-objc",
   "compatibleVersion": "3",
   "bundleVersion": 1,
   "commands": [
     {
-      "name": "更新文档页码及封面目录",
+      "name": "Fletch Objc",
       "identifier": "updateCatalog",
       "shortcut": "ctrl shift c",
-      "script": "main.js",
+      "script": "script.cocoascript",
       "handler": "updateCatalog"
     }
   ],
