昨天忘了提交插件本身的代码了。另外两个功能单独分为两个文件，互相可以不受影响

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -9,16 +9,24 @@
   "bundleVersion": 1,
   "commands": [
     {
-      "name": "Fletch Objc",
+      "name": "更新文档页码及封面目录",
       "identifier": "updateCatalog",
       "shortcut": "ctrl shift c",
-      "script": "script.cocoascript",
+      "script": "UpdateCatalog.cocoascript",
       "handler": "updateCatalog"
+    },
+    {
+      "name": "Fletch 添加更新记录",
+      "identifier": "addHistory",
+      "shortcut": "ctrl shift h",
+      "script": "AddHistory.cocoascript",
+      "handler": "addHistory"
     }
   ],
   "menu": {
     "items": [
-      "updateCatalog"
+      "updateCatalog",
+      "addHistory"
     ]
   }
 }
