开始做显示隐藏界面框的功能

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -22,12 +22,30 @@
       "shortcut": "ctrl shift h",
       "script": "AddHistory.cocoascript",
       "handler": "addHistory"
+    },
+    {
+      "name": "显示 / 隐藏界面框",
+      "identifier": "hideUIFramePanel",
+      "shortcut": "ctrl shift f",
+      "script": "HideUIFramePanel.cocoascript",
+      "handler": "showHideUIFramePanel"
+    },
+    {
+      "name": "显示 / 隐藏界面框 - 事件",
+      "identifier": "hideUIFrameOnSelection",
+      "script": "HideUIFrameOnSelection.cocoascript",
+      "handlers": {
+        "actions": {
+          "SelectionChanged.finish": "hideUIFrameOnSelection"
+        }
+      }
     }
   ],
   "menu": {
     "items": [
       "updateCatalog",
-      "addHistory"
+      "addHistory",
+      "hideUIFramePanel"
     ]
   }
 }
