Panel 部分的代码基本完成（抖动的后续做），接下来是处理选择事件相关的代码

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -24,14 +24,14 @@
       "handler": "addHistory"
     },
     {
-      "name": "显示 / 隐藏界面框",
+      "name": "显示 / 隐藏界面框或说明",
       "identifier": "hideUIFramePanel",
       "shortcut": "ctrl shift f",
       "script": "HideUIFramePanel.cocoascript",
       "handler": "showHideUIFramePanel"
     },
     {
-      "name": "显示 / 隐藏界面框 - 事件",
+      "name": "显示 / 隐藏界面框或说明 - 事件",
       "identifier": "hideUIFrameOnSelection",
       "script": "HideUIFrameOnSelection.cocoascript",
       "handlers": {
