修改插件命令顺序，增加分隔

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -51,10 +51,11 @@
   ],
   "menu": {
     "items": [
-      "updateCatalog",
+      "addDocumentArtboard",
       "addHistory",
+      "-",
       "hideUIFramePanel",
-      "addDocumentArtboard"
+      "updateCatalog"
     ]
   }
 }
