--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -3,7 +3,7 @@
   "description": "",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "1.2.3",
+  "version": "1.3.0",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
   "compatibleVersion": "3",
@@ -47,6 +47,14 @@
       "script": "AddDocumentArtboard.cocoascript",
       "handler": "addDocumentArtboard"
       
+    },
+    {
+      "name": "导出 PDF",
+      "identifier": "exportPDF",
+      "shortcut": "ctrl shift e",
+      "script": "ExportPDF.cocoascript",
+      "handler": "exportPDF"
+      
     }
   ],
   "menu": {
@@ -55,7 +63,8 @@
       "addHistory",
       "-",
       "hideUIFramePanel",
-      "updateCatalog"
+      "updateCatalog",
+      "exportPDF"
     ]
   }
 }
