--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -17,14 +17,14 @@
       "handler": "updateCatalog"
     },
     {
-      "name": "添加更新记录",
+      "name": "添加更新记录...",
       "identifier": "addHistory",
       "shortcut": "ctrl shift h",
       "script": "AddHistory.cocoascript",
       "handler": "addHistory"
     },
     {
-      "name": "显示 / 隐藏界面框或说明",
+      "name": "显示 / 隐藏界面框或说明...",
       "identifier": "hideUIFramePanel",
       "shortcut": "ctrl shift f",
       "script": "HideUIFramePanel.cocoascript",
@@ -49,7 +49,7 @@
       
     },
     {
-      "name": "导出 PDF",
+      "name": "导出 PDF...",
       "identifier": "exportPDF",
       "shortcut": "ctrl shift e",
       "script": "ExportPDF.cocoascript",
