--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -3,14 +3,14 @@
   "description": "",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
   "compatibleVersion": "3",
   "bundleVersion": 1,
   "commands": [
     {
-      "name": "更新文档页码及封面目录",
+      "name": "更新目录",
       "identifier": "updateCatalog",
       "shortcut": "ctrl shift c",
       "script": "UpdateCatalog.cocoascript",
@@ -24,14 +24,14 @@
       "handler": "addHistory"
     },
     {
-      "name": "显示 / 隐藏界面框或说明...",
+      "name": "显示 / 隐藏界面框...",
       "identifier": "hideUIFramePanel",
       "shortcut": "ctrl shift f",
       "script": "HideUIFramePanel.cocoascript",
       "handler": "showHideUIFramePanel"
     },
     {
-      "name": "显示 / 隐藏界面框或说明 - 事件",
+      "name": "显示 / 隐藏界面框 - 事件",
       "identifier": "hideUIFrameOnSelection",
       "script": "HideUIFrameOnSelection.cocoascript",
       "handlers": {
@@ -41,9 +41,9 @@
       }
     },
     {
-      "name": "添加交互文档画板",
+      "name": "添加线框画板",
       "identifier": "addDocumentArtboard",
-      "shortcut": "ctrl shift a",
+      "shortcut": "ctrl shift d",
       "script": "AddDocumentArtboard.cocoascript",
       "handler": "addDocumentArtboard"
       
@@ -60,9 +60,9 @@
   "menu": {
     "items": [
       "addDocumentArtboard",
-      "addHistory",
-      "-",
       "hideUIFramePanel",
+      "-",
+      "addHistory",
       "updateCatalog",
       "exportPDF"
     ]
