导出并压缩功能已经正常运行，但是使用的是压缩率较低的 printer 配置。下一步完善代码，并增加相关提示，甚至质量设置

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "🎈 Fletch",
+  "name": "Fletch",
   "description": "",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
@@ -65,6 +65,7 @@
       "addHistory",
       "updateCatalog",
       "exportPDF"
-    ]
+    ],
+    "title":"🎈 Fletch"
   }
 }
