--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -49,7 +49,7 @@
       
     },
     {
-      "name": "导出 PDF...",
+      "name": "导出并压缩 PDF（Beta）...",
       "identifier": "exportPDF",
       "shortcut": "ctrl shift e",
       "script": "ExportPDF.cocoascript",
