1. 去掉较大文件提示 2. 自动调整进度提示的位置（#29）

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -49,7 +49,7 @@
       
     },
     {
-      "name": "导出并压缩 PDF（Beta）...",
+      "name": "导出 PDF...",
       "identifier": "exportPDF",
       "shortcut": "ctrl shift e",
       "script": "ExportPDF.cocoascript",
