增加 icon，解决问题 #22，关闭问题 #23

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -5,6 +5,7 @@
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
   "version": "1.5.0",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
+  "icon": "../Resources/icons/icon.png",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
   "compatibleVersion": "48",
   "bundleVersion": 1,
