工具栏成功了！原来又是被杀掉的原因，现在好了。不过后面可以考虑再调整一下。目前添加更新记录窗口的关闭按钮有些问题，还在解决中

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -56,6 +56,14 @@
       "script": "ExportPDF.cocoascript",
       "handler": "exportPDF"
       
+    },
+    {
+      "name": "显示工具栏",
+      "identifier": "showToolbar",
+      "shortcut": "ctrl shift t",
+      "script": "ShowToolbar.cocoascript",
+      "handler": "showToolbar"
+      
     }
   ],
   "menu": {
@@ -65,7 +73,8 @@
       "-",
       "addHistory",
       "updateCatalog",
-      "exportPDF"
+      "exportPDF",
+      "showToolbar"
     ],
     "title":"🎈 Fletch"
   }
