已经基本可以工作了，自动化程度比预期好很多。但是更新目录出了非常奇怪的问题，完全不知道是为什么。可能要完全重构更新目录了

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -28,7 +28,7 @@
     },
     {
       "name": "显示 / 隐藏界面框...",
-      "identifier": "hideUIFramePanel",
+      "identifier": "showHideUIFramePanel",
       "isTool":"true",
       "shortcut": "ctrl shift f",
       "script": "HideUIFramePanel.cocoascript",
@@ -83,7 +83,7 @@
   "menu": {
     "items": [
       "addDocumentArtboard",
-      "hideUIFramePanel",
+      "showHideUIFramePanel",
       "-",
       "addHistory",
       "updateCatalog",
