--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -3,7 +3,7 @@
   "description": "",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "1.5.0",
+  "version": "2.0.0",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "icon": "../Resources/icons/icon.png",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
@@ -17,6 +17,14 @@
       "shortcut": "ctrl shift c",
       "script": "UpdateCatalog.cocoascript",
       "handler": "updateCatalog"
+    },
+    {
+      "name": "更新目录（旧）",
+      "identifier": "updateCatalog_OLD",
+      "isTool":"true",
+      "shortcut": "ctrl shift o",
+      "script": "UpdateCatalog_OLD.cocoascript",
+      "handler": "updateCatalog_OLD"
     },
     {
       "name": "添加更新记录...",
@@ -87,6 +95,7 @@
       "-",
       "addHistory",
       "updateCatalog",
+      "updateCatalog_OLD",
       "exportPDF",
       "-",
       {
