开始做工具栏定位的一些操作，但是现在已有命令已经出现了子命令的情况，工具栏读取命令的逻辑得重新梳理

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -81,6 +81,7 @@
     },
     {
       "name": "实验室测试",
+      "fullName": "实验室测试",
       "identifier": "fletchLabsTest",
       "isTool":"true",
       "shortcut": "ctrl shift l",
