--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "Fletch",
-  "description": "",
+  "description": "少一些时间编辑文档，多一些时间斟酌设计",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "1.5.0",
+  "version": "1.5.1",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "icon": "../Resources/icons/icon.png",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
@@ -42,11 +42,19 @@
       }
     },
     {
-      "name": "添加线框画板",
-      "identifier": "addDocumentArtboard",
-      "shortcut": "ctrl shift d",
+      "name": "16:9",
+      "fullName": "添加 16:9 线框画板",
+      "identifier": "add_16_9_DocumentArtboard",
       "script": "AddDocumentArtboard.cocoascript",
-      "handler": "addDocumentArtboard"
+      "handler": "add_16_9_DocumentArtboard"
+      
+    },
+    {
+      "name": "18:9",
+      "fullName": "添加 18:9 线框画板",
+      "identifier": "add_18_9_DocumentArtboard",
+      "script": "AddDocumentArtboard.cocoascript",
+      "handler": "add_18_9_DocumentArtboard"
       
     },
     {
@@ -60,7 +68,13 @@
   ],
   "menu": {
     "items": [
-      "addDocumentArtboard",
+      {
+        "title": "添加线框画板",
+        "items": [
+            "add_16_9_DocumentArtboard",
+            "add_18_9_DocumentArtboard"
+        ]
+    },
       "hideUIFramePanel",
       "-",
       "addHistory",
