--- a/Fletch.sketchplugin/Contents/Sketch/Fletch.framework/Versions/A/Resources/Info.plist
+++ b/Fletch.sketchplugin/Contents/Sketch/Fletch.framework/Versions/A/Resources/Info.plist
@@ -27,17 +27,17 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>10L201y</string>
+	<string>10L221o</string>
 	<key>DTPlatformVersion</key>
 	<string>GM</string>
 	<key>DTSDKBuild</key>
-	<string>18A326e</string>
+	<string>18A347e</string>
 	<key>DTSDKName</key>
 	<string>macosx10.14</string>
 	<key>DTXcode</key>
 	<string>1000</string>
 	<key>DTXcodeBuild</key>
-	<string>10L201y</string>
+	<string>10L221o</string>
 	<key>NSHumanReadableCopyright</key>
 	<string>Copyright © 2017年 pbb. All rights reserved.</string>
 </dict>
