--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -91,7 +91,16 @@
           "CloseDocument": "onClosingDocument"
         }
       }
-    }
+    },
+    {
+      "name": "对调描边和填充样式",
+      "fullName": "对调描边和填充样式",
+      "identifier": "swapStrokeAndFillStyles",
+      "isTool":"true",
+      "script": "SwapStrokeAndFillStyles.js",
+      "handler": "swapStrokeAndFillStyles"
+      
+    },
   ],
   "menu": {
     "items": [
@@ -108,6 +117,14 @@
       "addHistory",
       "updateCatalog",
       "exportPDF",
+      "-",
+      {
+        "title": "Fletch 实验室",
+        "identifier": "fletchLabs_Parent",
+        "items": [
+            "swapStrokeAndFillStyles"
+        ]
+      },
       "-",
       "showToolbar"
     ],
