--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Fletch 2",
+  "name": "Fletch 2 Beta",
   "description": "少一些时间编辑文档，多一些时间斟酌设计",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "2.0.0",
+  "version": "2.0.0 beta",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "icon": "../Resources/icons/icon.png",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
@@ -91,16 +91,7 @@
           "CloseDocument": "onClosingDocument"
         }
       }
-    },
-    {
-      "name": "对调描边和填充样式",
-      "fullName": "对调描边和填充样式",
-      "identifier": "swapStrokeAndFillStyles",
-      "isTool":"true",
-      "script": "SwapStrokeAndFillStyles.js",
-      "handler": "swapStrokeAndFillStyles"
-      
-    },
+    }
   ],
   "menu": {
     "items": [
@@ -118,16 +109,8 @@
       "updateCatalog",
       "exportPDF",
       "-",
-      {
-        "title": "Fletch 实验室",
-        "identifier": "fletchLabs_Parent",
-        "items": [
-            "swapStrokeAndFillStyles"
-        ]
-      },
-      "-",
       "showToolbar"
     ],
-    "title":"🎈 Fletch 2"
+    "title":"🎈 Fletch 2 Beta"
   }
 }
