1. 修改埋点导致自定义工具栏崩溃的 bug 2. 修复问题 #44

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -119,7 +119,7 @@
       "exportPDF",
       "-",
       {
-        "title": "Fletch 实验室",
+        "title": "实验室",
         "identifier": "fletchLabs_Parent",
         "items": [
             "swapStrokeAndFillStyles"
