添加线框画板功能本身做好了，接下来看怎么把 GA 统计的功能迁移到 Objective-C，并且增加一些数据，例如版本号、系统版本等等

--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -64,6 +64,15 @@
       
     },
     {
+      "name": "横屏",
+      "fullName": "添加横屏线框画板",
+      "identifier": "addLandscapeDocumentArtboard",
+      "isTool":"true",
+      "script": "AddDocumentArtboard.cocoascript",
+      "handler": "addLandscapeDocumentArtboard"
+      
+    },
+    {
       "name": "导出 PDF...",
       "identifier": "exportPDF",
       "isTool":"true",
@@ -109,7 +118,8 @@
         "identifier": "addDocumentArtboard_Parent",
         "items": [
             "add_16_9_DocumentArtboard",
-            "add_18_9_DocumentArtboard"
+            "add_18_9_DocumentArtboard",
+            "addLandscapeDocumentArtboard"
         ]
     },
       "showHideUIFramePanel",
