--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -1,9 +1,9 @@
 {
-  "name": "Fletch 2",
+  "name": "Fletch 2 Beta",
   "description": "少一些时间编辑文档，多一些时间斟酌设计",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "2.1.1",
+  "version": "2.1.1 beta",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "icon": "../Resources/icons/icon.png",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
@@ -143,6 +143,6 @@
       "-",
       "showToolbar"
     ],
-    "title":"🎈 Fletch 2"
+    "title":"🎈 Fletch 2 Beta"
   }
 }
