--- a/Fletch.sketchplugin/Contents/Sketch/manifest.json
+++ b/Fletch.sketchplugin/Contents/Sketch/manifest.json
@@ -3,7 +3,7 @@
   "description": "少一些时间编辑文档，多一些时间斟酌设计",
   "author": "Flyme UXD",
   "homepage": "https://github.com/PBBB/FlymeUXDSketchHelper",
-  "version": "2.1.1",
+  "version": "2.1.2",
   "identifier": "com.flyme.uxd.pbb.sketch-helper",
   "icon": "../Resources/icons/icon.png",
   "appcast": "https://raw.githubusercontent.com/PBBB/FlymeUXDSketchHelper/master/appcast.xml",
@@ -46,12 +46,12 @@
       }
     },
     {
-      "name": "16:9",
-      "fullName": "添加 16:9 线框画板",
-      "identifier": "add_16_9_DocumentArtboard",
+      "name": "19.5:9",
+      "fullName": "添加 19.5:9 线框画板",
+      "identifier": "add_19_5_9_DocumentArtboard",
       "isTool":"true",
       "script": "AddDocumentArtboard.cocoascript",
-      "handler": "add_16_9_DocumentArtboard"
+      "handler": "add_19_5_9_DocumentArtboard"
     },
     {
       "name": "18:9",
@@ -68,6 +68,14 @@
       "isTool":"true",
       "script": "AddDocumentArtboard.cocoascript",
       "handler": "addLandscapeDocumentArtboard"
+    },
+    {
+      "name": "手表",
+      "fullName": "添加手表线框画板",
+      "identifier": "addWatchDocumentArtboard",
+      "isTool":"true",
+      "script": "AddDocumentArtboard.cocoascript",
+      "handler": "addWatchDocumentArtboard"
     },
     {
       "name": "导出 PDF...",
@@ -121,9 +129,10 @@
         "title": "添加线框画板",
         "identifier": "addDocumentArtboard_Parent",
         "items": [
-            "add_16_9_DocumentArtboard",
+            "add_19_5_9_DocumentArtboard",
             "add_18_9_DocumentArtboard",
-            "addLandscapeDocumentArtboard"
+            "addLandscapeDocumentArtboard",
+            "addWatchDocumentArtboard"
         ]
     },
       "showHideUIFramePanel",
